<resources>
    <string name="app_name">CsCul</string>
    <string name="EqualSign">=</string>
    <string name="point">.</string>
    <string name="number3">3</string>
    <string name="number6">6</string>
    <string name="number9">9</string>
    <string name="multiple">×</string>
    <string name="mMinus">m-</string>
    <string name="zero_sign">0</string>
    <string name="number2">2</string>
    <string name="number5">5</string>
    <string name="number8">8</string>
    <string name="division_sign">÷</string>
    <string name="mPlus">m+</string>
    <string name="percent_sign">%</string>
    <string name="number1">1</string>
    <string name="number4">4</string>
    <string name="number7">7</string>
    <string name="clean_sign">C</string>
    <string name="mc">mc</string>
    <string name="mr">mr</string>
    <string name="del">Del</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>
